fix mobile spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1879,7 +1879,7 @@ button {
   .product-detail {
     display: flex !important;
     flex-direction: column !important;
-    gap: 0 !important;
+    gap: 4 !important;
     padding: 12px !important;
   }
 
